Final submission updates

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div id="register_now_container">
-            <span>Register Now!</span>
+            <a href="register.html">Register Now!</a>
         </div>
 
         <script src="./scripts/script.js"></script>
